--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -37,7 +37,7 @@
         padding: 3rem;
         border-radius: 10px;
         align-items: flex-start;
-        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.5);
+        box-shadow: 0px 4px 4px rgb(0, 0, 54);
         transition: all 300ms ease-in;
         z-index: 99;
     }
